--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -23,6 +23,16 @@
         </div>
     <% } %>
 
+
+    <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+        <input type="text" id="locationInput" placeholder="Enter a city..." value="<%= listing.location %>" hidden />
+        <h4>Click On <button onclick="geocodeAndFly()">Go</button> To see The Location</h4>
+        
+        <div id="cesiumContainer" style="width: 70%; height: 300px;"></div>
+    </div>
+
+
+
     <div class="col-8 offset-3 mb-3">
         <hr>
         <% if(currUser){ %>
@@ -71,4 +81,8 @@
     </div>
 </div>
 
+<script>
+    const mapToken = "<%= process.env.MAP_API_TOKEN %>"
+    const openCageToken = "<%= process.env.OPENCAGE_API_TOKEN %>"
+</script>
 
