--- a/frontend/src/components/ListingCard.css
+++ b/frontend/src/components/ListingCard.css
@@ -30,7 +30,8 @@
 
 .card-img-overlay:hover {
   opacity: 0.2;
-  background-color: white;
+  background-color: lightgray;
+  border-radius:15px;
 }
 
 .tax-info {
