--- a/frontend/src/pages/UpdateListing.css
+++ b/frontend/src/pages/UpdateListing.css
@@ -91,6 +91,8 @@
 
 .form-group input,
 .form-group textarea {
+  background-color: lightgray;
+  color: black; 
   padding: 0.75rem;
   border: 1px solid #ddd;
   border-radius: 8px;
