--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -280,3 +280,22 @@
     margin-top: 10px;
   }
 }
+
+
+.notification-link {
+  position: relative;
+  font-size: 1.5rem;
+  color: #555;
+}
+
+.notification-badge {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 0.1rem 0.4rem;
+  font-size: 0.7rem;
+  font-weight: bold;
+}
